--- a/index.html
+++ b/index.html
@@ -5,24 +5,18 @@
   <title>AR.js Hiro Marker Card Overlay</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- A-Frame -->
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
-  <!-- AR.js -->
   <script src="https://cdn.jsdelivr.net/gh/AR-js-org/AR.js/aframe/build/aframe-ar.js"></script>
 </head>
-<body style="margin: 0; overflow: hidden;">
-  <a-scene
-    embedded
-    arjs="sourceType: webcam; debugUIEnabled: false;">
+<body style="margin:0; overflow:hidden;">
+  <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
 
-    <!-- assets -->
     <a-assets>
       <img id="cardImage" src="img/card.png">
     </a-assets>
 
-    <!-- Hiro marker -->
     <a-marker preset="hiro">
-      <!-- 名刺全体（91×55mm）を覆う画像 -->
+      <!-- 名刺サイズ（91×55mm）を完全に覆う画像 -->
       <a-image
         src="#cardImage"
         width="1"
@@ -32,11 +26,9 @@
       </a-image>
     </a-marker>
 
-    <!-- camera -->
     <a-entity camera></a-entity>
   </a-scene>
 </body>
 </html>
-
 
 
