--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     </a-assets>
 
     <a-marker preset="hiro">
-      <!-- 名刺サイズ（91×55mm）を完全に覆う画像 -->
+      <!-- 名刺全体（91×55mm）を確実に覆う -->
       <a-image
         src="#cardImage"
-        width="1"
-        height="0.604"
-        position="0.357 0 0"
+        width="1.75"
+        height="1.056"
+        position="0.875 0 0"
         rotation="-90 0 0">
       </a-image>
     </a-marker>
@@ -30,5 +30,6 @@
   </a-scene>
 </body>
 </html>
+
 
 
