--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>AR.js Hiro Marker Card Overlay</title>
+  <title>AR.js Card Overlay</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
@@ -12,16 +12,16 @@
   <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
 
     <a-assets>
-      <img id="cardImage" src="img/card.png">
+      <img id="cardImage" src="img/sample.png">
     </a-assets>
 
     <a-marker preset="hiro">
-      <!-- 名刺全体（91×55mm）を確実に覆う -->
+      <!-- 名刺全体（91×55mm）を覆う画像 -->
       <a-image
         src="#cardImage"
-        width="1.75"
-        height="1.056"
-        position="0.875 0 0"
+        width="3.5"
+        height="2.115"
+        position="1.25 0 0"
         rotation="-90 0 0">
       </a-image>
     </a-marker>
@@ -30,6 +30,7 @@
   </a-scene>
 </body>
 </html>
+
 
 
 
