--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
 
     <a-assets>
-      <img id="cardImage" src="img/sample.png">
+      <img id="cardImage" src="img/card.png">
     </a-assets>
 
     <a-marker preset="hiro">
